@@ -1,3 +1,12 @@
+Fri Apr 16 18:25:38 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
+
+	* lib/Mj/Resend.pm (_post): Take an entity as a phantom extra
+ 	argument and always take the true file name.
+	(post): Always pass the source file and pass the entity as an
+ 	extra argument.
+
+	* lib/Majordomo.pm (help_start): Fix passing topic as the victim.
+
 Wed Apr 14 02:32:12 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
 
 	* bin/mj_enqueue: Take -P and -p arguments to specify domain and
